unlocked new project

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6"> <div class="bg-white p-4 rounded-lg shadow-md">
           <h3 class="text-xl font-bold">Manual: Multi-Tier Web App on AWS</h3>
           <p>Manually deployed a non-scalable 3-tier architecture using EC2, RDS, ALB, and VPC. Configured IAM roles and implemented security best practices.</p>
-          <span class="text-crimson">Work in Progress</span>
+          <a href="https://github.com/TjTrerise/Manual-Deployment-Multi-Tier-Web-App" class="text-blue-600 hover:underline hover:text-blue-dark">View Project on GitHub</a>
         </div>
         <div class="bg-white p-4 rounded-lg shadow-md">
           <h3 class="text-xl font-bold">Automated: Multi-Tier Web App on AWS</h3>
