Updated website to show diagrams

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="about" class="mb-12">
       <h2 class="text-2xl font-semibold mb-2">About Me</h2>
       <p>
-      Welcome to my portfolio! 
+      Experienced Level 3 IT Engineer with expertise in comprehensive infrastructure management, cloud solutions (AWS, Microsoft 365), and advanced network administration. Proven ability to resolve complex incidents, automate processes, and enhance security postures for diverse client environments.
     </section>
 
     <section id="projects" class="mb-12">
@@ -43,11 +43,24 @@
       </div>
     </section>
 
-    <section class="mb-12"> <h2 class="text-2xl font-semibold mb-4">Project 2. AWS Multi-Region VPC Network Architecture with Transit Gateway</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6"> <div class="bg-white p-4 rounded-lg shadow-md">
-          <h3 class="text-xl font-bold">Manual: AWS Multi-Region VPC Network Architecture with Transit Gateway</h3>
-          <p>Building a robust, multi-region cloud network architecture on AWS. Leveraging core networking components like custom VPCs, public/private subnets, NAT Gateways, and security groups, with a focus on establishing secure and scalable inter-region connectivity using AWS Transit Gateway.</p>
-          <a href="https://github.com/TjTrerise/Manual-Deployment-VPC-Network-Design" class="text-blue-600 hover:underline hover:text-blue-dark">View Project on GitHub</a>
+    <section class="mb-12"> 
+      <h2 class="text-2xl font-semibold mb-4">Project 2. AWS Multi-Region VPC Network Architecture with Transit Gateway</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6"> 
+        <div class="bg-white p-4 rounded-lg shadow-md flex flex-col">
+          <h3 class="text-xl font-bold mb-2">Manual: AWS Multi-Region VPC Network Architecture with Transit Gateway</h3>
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start">
+            <div>
+              <h4 class="font-semibold text-gray-700 mb-2">Architectural Diagram</h4>
+              <a href="docs/architectural-diagrams/2/vpc-manual.png" target="_blank">
+                <img src="docs/architectural-diagrams/2/vpc-manual-thumbnail.png" alt="Manual Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+              </a>
+              <p class="text-sm text-gray-500 mt-1">Click to enlarge</p>
+            </div>
+            <div>
+              <p>Manually deployed a multi-region cloud network architecture on AWS. Leveraging core networking components like custom VPCs, public/private subnets, NAT Gateways, and security groups, with a focus on establishing secure and scalable inter-region connectivity using AWS Transit Gateway.</p>
+              <a href="https://github.com/TjTrerise/Manual-Deployment-VPC-Network-Design" class="text-blue-600 hover:underline hover:text-blue-dark mt-2 block">View Project on GitHub</a>
+            </div>
+          </div>
         </div>
         <div class="bg-white p-4 rounded-lg shadow-md">
           <h3 class="text-xl font-bold">Automated: AWS Multi-Region VPC Network Architecture with Transit Gateway</h3>
@@ -57,11 +70,24 @@
       </div>
     </section>
 
-    <section class="mb-12"> <h2 class="text-2xl font-semibold mb-4">Project 3. Multi-Tier Web App</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6"> <div class="bg-white p-4 rounded-lg shadow-md">
-          <h3 class="text-xl font-bold">Manual: Multi-Tier Web App on AWS</h3>
-          <p>Manually deployed a non-scalable 3-tier architecture using EC2, RDS, ALB, and VPC. Configured IAM roles and implemented security best practices.</p>
-          <a href="https://github.com/TjTrerise/Manual-Deployment-Multi-Tier-Web-App" class="text-blue-600 hover:underline hover:text-blue-dark">View Project on GitHub</a>
+    <section class="mb-12"> 
+      <h2 class="text-2xl font-semibold mb-4">Project Project 3. Multi-Tier Web App</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6"> 
+        <div class="bg-white p-4 rounded-lg shadow-md flex flex-col">
+          <h3 class="text-xl font-bold mb-2">Manual: Multi-Tier Web App on AWS</h3>
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start">
+            <div>
+              <h4 class="font-semibold text-gray-700 mb-2">Architectural Diagram </h4>
+              <a href="docs/architectural-diagrams/3/manual/manual-multi-app.png" target="_blank">
+                <img src="docs/architectural-diagrams/3/manual/manual-multi-thumbnail.png" alt="Manual Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+              </a>
+              <p class="text-sm text-gray-500 mt-1">Click to enlarge</p>
+            </div>
+            <div>
+              <p>Manually deployed a non-scalable 3-tier architecture using EC2, RDS, ALB, and VPC. Configured IAM roles and implemented security best practices.</p>
+              <a href="https://github.com/TjTrerise/Manual-Deployment-Multi-Tier-Web-App" class="text-blue-600 hover:underline hover:text-blue-dark mt-2 block">View Project on GitHub</a>
+            </div>
+          </div>
         </div>
         <div class="bg-white p-4 rounded-lg shadow-md">
           <h3 class="text-xl font-bold">Automated: Multi-Tier Web App on AWS</h3>
@@ -71,21 +97,33 @@
       </div>
     </section>
 
-    <section class="mb-12">
-      <h2 class="text-2xl font-semibold mb-4">Project 4. Build A Secure Serverless App</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6"> <div class="bg-white p-4 rounded-lg shadow-md">
-          <h3 class="text-xl font-bold">Manual: Build A Secure Serverless App </h3>
-          <p>Built a serverless CRUD API using API Gateway, Lambda and DynamoDB. Added fine-grained IAM permissions and logged using CloudWatch. Utilised Cognito for user authentication. </p>
-          <span class="text-crimson">Work in Progress</span>
+    <section class="mb-12"> 
+      <h2 class="text-2xl font-semibold mb-4">Project 4. A Secure Serverless App</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6"> 
+        <div class="bg-white p-4 rounded-lg shadow-md flex flex-col">
+          <h3 class="text-xl font-bold mb-2">Manual: Build A Secure Serverless App</h3>
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start">
+            <div>
+              <h4 class="font-semibold text-gray-700 mb-2">Architectural Diagram </h4>
+              <a href="docs/architectural-diagrams/4/manual/manual-serverless.png" target="_blank">
+                <img src="docs/architectural-diagrams/4/manual/manual-serverless-thumbnail.png" alt="Manual Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+              </a>
+              <p class="text-sm text-gray-500 mt-1">Click to enlarge</p>
+            </div>
+            <div>
+              <p>Built a serverless CRUD API using API Gateway, Lambda and DynamoDB. Added fine-grained IAM permissions and logged using CloudWatch. Utilised Cognito for user authentication. </p>
+              <a href="https://github.com/TjTrerise/Manual-Deployment-Secure-Serverless-App" class="text-blue-600 hover:underline hover:text-blue-dark mt-2 block">View Project on GitHub</a>
+            </div>
+          </div>
         </div>
-        <div class="bg-white p-4 rounded-lg shadow-md">
-          <h3 class="text-xl font-bold">Automated: Build A Secure Serverless App </h3>
+          <div class="bg-white p-4 rounded-lg shadow-md">
+          <h3 class="text-xl font-bold">Automated: A Secure Serverless App</h3>
           <p>Automated the entire build and deployment process for the secure serverless CRUD API. With built-in security configurations (IAM, logging, Cognito integration) at scale.</p>
           <span class="text-crimson">Work in Progress</span>
         </div>
       </div>
     </section>
-
+        
     <section class="mb-12">
       <h2 class="text-2xl font-semibold mb-4">Project 5. Infrastructure As Code (IAC) CloudFormation & Terraform</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6"> <div class="bg-white p-4 rounded-lg shadow-md">
