Finally finished links

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2 inline-block">Architectural Diagram</h4>
-                            <a href="docs/architectural-diagrams/2/vpc-manual.png" target="_blank">
-                                <img src="docs/architectural-diagrams/2/vpc-manual-thumbnail.png" alt="Manual Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            <a href="docs/architectural-diagrams/2/vpc-manual.png target="_blank">
+                                <img src="docs/architectural-diagrams/2/vpc-manual-2.png" alt="Manual Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
                         </div>
@@ -95,8 +95,8 @@
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2">Architectural Diagram</h4>
-                            <a href="docs/architectural-diagrams/3/manual/manual-multi-app.png" target="_blank">
-                                <img src="docs/architectural-diagrams/3/manual/manual-multi-thumbnail.png" alt="Manual Multi-Tier Web App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            <a href="docs/architectural-diagrams/3/manual/manual-multi-2.png" target="_blank">
+                                <img src="docs/architectural-diagrams/3/manual/manual-multi-app.png" alt="Manual Multi-Tier Web App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
                         </div>
@@ -122,7 +122,7 @@
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2">Architectural Diagram</h4>
                             <a href="docs/architectural-diagrams/4/manual/manual-serverless.png" target="_blank">
-                                <img src="docs/architectural-diagrams/4/manual/manual-serverless-thumbnail.png" alt="Manual Serverless App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                                <img src="docs/architectural-diagrams/4/manual/manual-serverless-2.png" alt="Manual Serverless App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
                         </div>
