--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
       
         body {
-            background-image: url('docs/images/main-background.jpg');
+            background-image: url('https://tjt.org.uk/projects/background-projects.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -36,7 +36,7 @@
     <main class="max-w-5xl mx-auto px-4 py-8">
         <section id="about" class="mb-12">
             <div class="bg-white p-4 rounded-lg shadow-md">
-                <h2 class="text-2xl text-indigo-600 font-semibold mb-2">Welcome To My Projects Page</h2>
+                <h2 class="text-2xl text-indigo-600 font-semibold mb-2 text-center">Welcome To My Projects Page</h2>
                 <p>
                     <h4 class="font-semibold text-slate-600 mb-2 inline-block"> My journey as an IT Engineer has been a continuous process of learning and growth, with a strong focus on mastering cloud solutions and infrastructure. The projects on this page represent my dedication to building practical, hands-on skills in comprehensive infrastructure management Utilising cloud solutions. I hope that it reflects my continuing growth and development of skills. The initial projects were all manual creations. The goal was to fully understand the workflow and how to manually create each of the architecture types. Once I had that fundamental understanding it was creating scalable and reusable templates.</h4>
                 </p>
@@ -44,7 +44,7 @@
         </section>
 
         <section id="projects" class="mb-12">
-            <div class="bg-white p-4 rounded-lg shadow-md mb-4">
+            <div class="bg-white p-4 rounded-lg shadow-md mb-4 text-center">
                 <h3 class="text-xl text-indigo-600 font-bold">Static Website Hosting + CDN + HTTPS</h3>
                 <p class="text-slate-600">Deployed a static website on S3, served via CloudFront with HTTPS, registering a domain and configuring DNS with Route 53.</p>
                 <a href="https://github.com/TjTrerise/Static-Website-Hosting" target="_blank" class="text-indigo-600 hover:underline hover:text-blue-dark">View Project on GitHub</a>
@@ -52,30 +52,30 @@
         </section>
 
         <section class="mb-12">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col">
-                    <h3 class="text-xl text-indigo-600 font-bold mb-2">Manual: AWS Multi-Region VPC Network Architecture with Transit Gateway</h3>
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 ">
+                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col text-center">
+                    <h3 class="text-xl text-indigo-600 font-bold mb-2">AWS Multi-Region VPC Network Architecture with Transit Gateway</h3>
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start text-center">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2 inline-block">Architectural Diagram</h4>
-                            <a href="docs/architectural-diagrams/2/vpc-manual.png target="_blank">
-                                <img src="docs/architectural-diagrams/2/vpc-manual-2.png" alt="Manual Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            <a href="docs/architectural-diagrams/2/vpc-manual.png" target="_blank">
+                                <img src="docs/architectural-diagrams/2/vpc-manual-thumbnail.png" alt="Manual Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
                         </div>
                         <div>
-                            <p class="text-slate-600">Manually deployed a multi-region cloud network architecture on AWS. Leveraging core networking components like custom VPCs, public/private subnets, NAT Gateways, and security groups, with a focus on establishing secure and scalable inter-region connectivity using AWS Transit Gateway.</p>
+                            <p class="text-slate-600">Deployed a multi-region cloud network architecture on AWS. Leveraging core networking components like custom VPCs, public/private subnets, NAT Gateways, and security groups, with a focus on establishing secure and scalable inter-region connectivity using AWS Transit Gateway.</p>
                             <a href="https://github.com/TjTrerise/Manual-Deployment-VPC-Network-Design" target="_blank" class="text-indigo-600 hover:underline hover:text-blue-dark mt-2 block">View Project on GitHub</a>
                         </div>
                     </div>
                 </div>
-                <div class="bg-white p-4 rounded-lg shadow-md">
-                    <h3 class="text-xl text-indigo-600 font-bold">Automated: AWS Multi-Region VPC Network Architecture with Transit Gateway</h3>
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start">
+                <div class="bg-white p-4 rounded-lg shadow-md text-center">
+                    <h3 class="text-xl text-indigo-600 font-bold">IaC: AWS Multi-Region VPC Network Architecture with Transit Gateway</h3>
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start text-center">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2 inline-block">Architectural Diagram</h4>
-                            <a href="docs/architectural-diagrams/2/automated-multi-region-vpc.png" target="_blank">
-                                <img src="docs/architectural-diagrams/2/automated-multi-region-vpc.(thumbnail).png" alt="Automated Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            <a href="/images/architectural-diagrams/2.automated-deployment/automated-multi-region-vpc.drawio.png" target="_blank">
+                                <img src="/images/architectural-diagrams/2.automated-deployment/automated-multi-region-vpc.drawio+(thumbnail).png" alt="Automated Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
                         </div>
@@ -90,84 +90,64 @@
 
         <section class="mb-12">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col">
-                    <h3 class="text-xl text-indigo-600 font-bold mb-2">Manual: Multi-Tier Web App on AWS</h3>
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start">
+                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col text-center">
+                    <h3 class="text-xl text-indigo-600 font-bold mb-2"> Multi-Tier Web App on AWS</h3>
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start text-center">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2">Architectural Diagram</h4>
-                            <a href="docs/architectural-diagrams/3/manual/manual-multi-2.png" target="_blank">
-                                <img src="docs/architectural-diagrams/3/manual/manual-multi-app.png" alt="Manual Multi-Tier Web App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            <a href="docs/architectural-diagrams/3/manual/manual-multi-app.png" target="_blank">
+                                <img src="docs/architectural-diagrams/3/manual/manual-multi-thumbnail.png" alt="Manual Multi-Tier Web App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
                         </div>
                         <div>
-                            <p class="text-slate-600">Manually deployed a non-scalable 3-tier architecture using EC2, RDS, ALB, and VPC. Configured IAM roles and implemented security best practices.</p>
+                            <p class="text-slate-600">Deployed a non-scalable 3-tier architecture using EC2, RDS, ALB, and VPC. Configured IAM roles and implemented security best practices.</p>
                             <a href="https://github.com/TjTrerise/Manual-Deployment-Multi-Tier-Web-App" target="_blank" class="text-indigo-600 hover:underline hover:text-blue-dark mt-2 block">View Project on GitHub</a>
                         </div>
                     </div>
                 </div>
-                <div class="bg-white p-4 rounded-lg shadow-md">
-                    <h3 class="text-xl text-indigo-600 font-bold">Automated: Multi-Tier Web App on AWS</h3>
-                    <p class="text-slate-600">Improved the non-scalable 3-tier architecture using EC2, RDS, ALB, and VPC. Configured IAM roles and implemented security best practices.</p>
+                <div class="bg-white p-4 rounded-lg shadow-md text-center">
+                    <h3 class="text-xl text-indigo-600 font-bold">IaC: Multi-Tier Web App on AWS</h3>
+                    <p class="text-slate-600">Improved the non-scalable 3-tier architecture using CloudFormatiom, EC2, RDS, ALB, and VPC. Configured IAM roles and implemented security best practices.</p>
                     <span class="text-amber-600">Work in Progress</span>
                 </div>
             </div>
         </section>
 
         <section class="mb-12">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col">
-                    <h3 class="text-xl text-indigo-600 font-bold mb-2">Manual: Build A Secure Serverless App</h3>
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start">
+            <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
+                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col items-center">
+                    <h3 class="text-xl text-indigo-600 font-bold mb-2">Built A Secure Serverless App</h3>
+                    <div class="text-center">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2">Architectural Diagram</h4>
                             <a href="docs/architectural-diagrams/4/manual/manual-serverless.png" target="_blank">
-                                <img src="docs/architectural-diagrams/4/manual/manual-serverless-2.png" alt="Manual Serverless App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                                <img src="docs/architectural-diagrams/4/manual/manual-serverless-thumbnail.png" alt="Manual Serverless App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
-                            <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
+                            <p class="text-sm text-slate-600 mt-1 items-center">Click to enlarge</p>
                         </div>
                         <div>
-                            <p class="text-slate-600">Built a serverless CRUD API using API Gateway, Lambda and DynamoDB. Added fine-grained IAM permissions and utilised Cognito for user authentication.</p>
+                            <p class="text-slate-600 items-center">Built a serverless CRUD API using API Gateway, Lambda and DynamoDB. Added fine-grained IAM permissions and utilised Cognito for user authentication.</p>
                             <a href="https://github.com/TjTrerise/Manual-Deployment-Secure-Serverless-App" target="_blank" class="text-indigo-600 hover:underline hover:text-blue-dark mt-2 block">View Project on GitHub</a>
                         </div>
                     </div>
-                </div>
-                <div class="bg-white p-4 rounded-lg shadow-md">
-                    <h3 class="text-xl text-indigo-600 font-bold">Automated: A Secure Serverless App</h3>
-                    <p class="text-slate-600">Automated the entire build and deployment process for the secure serverless CRUD API. With built-in security configurations (IAM, logging, Cognito integration) at scale.</p>
-                    <span class="text-amber-600">Work in Progress</span>
-                </div>
-            </div>
-        </section>
-
-        <section class="mb-12">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div class="bg-white p-4 rounded-lg shadow-md">
-                    <h3 class="text-xl text-indigo-600 font-bold">IAC CloudFormation</h3>
-                    <p class="text-slate-600">Engineered CloudFormation templates to automate the provisioning of a highly available, multi-tier application infrastructure. Version-controlled on GitHub, ensuring repeatable deployments across environments.</p>
-                    <span class="text-amber-600">Work in Progress</span>
-                </div>
-                <div class="bg-white p-4 rounded-lg shadow-md">
-                    <h3 class="text-xl text-indigo-600 font-bold">IAC Terraform</h3>
-                    <p class="text-slate-600">Developed Terraform modules to provision a scalable, multi-tier application infrastructure programmatically. Managed via GitHub for version control and automated, consistent deployments.</p>
-                    <span class="text-amber-600">Work in Progress</span>
                 </div>
             </div>
         </section>
 
         <section class="mb-12">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <div class="bg-white p-4 rounded-lg shadow-md">
+                <div class="bg-white p-4 rounded-lg shadow-md text-center ">
                     <h3 class="text-xl text-indigo-600 font-bold">CI/CD for EC2-based Application</h3>
                     <p class="text-slate-600">Automated deployment pipeline for a web application running on Amazon EC2 instances, leveraging AWS CodePipeline and CodeBuild, with deployment via CodeDeploy.</p>
                     <span class="text-amber-600">Work in Progress</span>
                 </div>
-                <div class="bg-white p-4 rounded-lg shadow-md">
+                <div class="bg-white p-4 rounded-lg shadow-md text-center">
                     <h3 class="text-xl text-indigo-600 font-bold">CI/CD for Serverless (Lambda) Application</h3>
                     <p class="text-slate-600">Implemented a CI/CD pipeline for a serverless API using AWS Lambda and API Gateway, orchestrated via CodePipeline and deployed with AWS SAM/CloudFormation.</p>
                     <span class="text-amber-600">Work in Progress</span>
                 </div>
-                <div class="bg-white p-4 rounded-lg shadow-md">
+                <div class="bg-white p-4 rounded-lg shadow-md text-center">
                     <h3 class="text-xl text-indigo-600 font-bold">CI/CD for Containerized (ECS) Application</h3>
                     <p class="text-slate-600">Built an automated CI/CD pipeline for a Dockerized application deployed to Amazon ECS Fargate, including image build/push to ECR and service updates.</p>
                     <span class="text-amber-600">Work in Progress</span>
