upgraded the website and added new improved diagrams for projects

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start text-center">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2 inline-block">Architectural Diagram</h4>
-                            <a href="docs/architectural-diagrams/2/vpc-manual-thumbnail.png" target="_blank">
-                                <img src="docs/architectural-diagrams/2/vpc-manual.png" alt="Manual Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            <a href="docs/architectural-diagrams/2/vpc-manual-2" target="_blank">
+                                <img src="docs/architectural-diagrams/2/vpc-manual-thumbnail.png" alt="Manual Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
                         </div>
@@ -74,8 +74,8 @@
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start text-center">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2 inline-block">Architectural Diagram</h4>
-                            <a href="docs/architectural-diagrams/2/automated-multi-region-vpc.(thumbnail).png" target="_blank">
-                                <img src="docs/architectural-diagrams/2/automated-multi-region-vpc.png" alt="Automated Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            <a href="docs/architectural-diagrams/2/iac-multi-region-vpc.png" target="_blank">
+                                <img src="docs/architectural-diagrams/2/iac-multi-region-vpc-thumbnail.png" alt="Automated Deployment Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
                         </div>
@@ -95,8 +95,8 @@
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start text-center">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2">Architectural Diagram</h4>
-                            <a href="docs/architectural-diagrams/3/manual/4" target="_blank">
-                                <img src="docs/architectural-diagrams/3/manual/manual-multi-app.png" alt="Manual Multi-Tier Web App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            <a href="docs/architectural-diagrams/3/manual-multi-tier-web-app.png" target="_blank">
+                                <img src="docs/architectural-diagrams/3/manual-multi-tier-web-app-thumbnail.png" alt="Manual Multi-Tier Web App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
                         </div>
@@ -107,12 +107,23 @@
                     </div>
                 </div>
                 <div class="bg-white p-4 rounded-lg shadow-md text-center">
-                    <h3 class="text-xl text-indigo-600 font-bold">IaC: Multi-Tier Web App on AWS</h3>
-                    <p class="text-slate-600">Improved the non-scalable 3-tier architecture using CloudFormatiom, EC2, RDS, ALB, and VPC. Configured IAM roles and implemented security best practices.</p>
-                    <span class="text-amber-600">Work in Progress</span>
+               <h3 class="text-xl text-indigo-600 font-bold mb-2">IaC: Multi-Tier Web App on AWS</h3>
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 items-start text-center">
+                        <div>
+                            <h4 class="font-semibold text-slate-800 mb-2">Architectural Diagram</h4>
+                            <a href="docs/architectural-diagrams/3/iac-multi-tier-web-app.png" target="_blank">
+                                <img src="docs/architectural-diagrams/3/iac-multi-tier-web-app-thumbnail.png" alt="Manual Multi-Tier Web App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            </a>
+                            <p class="text-sm text-slate-600 mt-1">Click to enlarge</p>
+                        </div>
+                        <div>
+                            <p class="text-slate-600">Improved the non-scalable 3-tier architecture by making it highly available and scalable,CloudFormation, EC2, RDS, ALB, and VPC. Configured IAM roles and implemented security best practices.</p>
+                            <a href="https://github.com/TjTrerise/Automated-Deployment-Multi-Tier-Web-App" target="_blank" class="text-indigo-600 hover:underline hover:text-blue-dark mt-2 block">View Project on GitHub</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
+        <section class="mb-12">
 
         <section class="mb-12">
             <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
@@ -121,8 +132,8 @@
                     <div class="text-center">
                         <div>
                             <h4 class="font-semibold text-slate-800 mb-2">Architectural Diagram</h4>
-                            <a href="docs/architectural-diagrams/4/manual/manual-serverless.png" target="_blank">
-                                <img src="docs/architectural-diagrams/4/manual/manual-serverless-2.png" alt="Manual Serverless App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
+                            <a href="docs/architectural-diagrams/4/manual/secure-serverless-crud-api.png" target="_blank">
+                                <img src="docs/architectural-diagrams/4/manual/secure-serverless-crud-api-thumbnail.png" alt="Manual Serverless App Diagram" class="w-full h-auto rounded-md shadow-sm border border-gray-200" />
                             </a>
                             <p class="text-sm text-slate-600 mt-1 items-center">Click to enlarge</p>
                         </div>
