--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </div>
-        <section class="mb-12">
+        </section>
 
         <section class="mb-12">
             <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
